Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/APlayerController.h

	DOTNET_EXPORT auto E_PROP_APlayerController_AcknowledgedPawn_GET(APlayerController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->AcknowledgedPawn); }
	DOTNET_EXPORT void E_PROP_APlayerController_AcknowledgedPawn_SET(APlayerController* Ptr, APawn* Value) { Ptr->AcknowledgedPawn = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_bAutoManageActiveCameraTarget_GET(APlayerController* Ptr) { return Ptr->bAutoManageActiveCameraTarget; }
	DOTNET_EXPORT void E_PROP_APlayerController_bAutoManageActiveCameraTarget_SET(APlayerController* Ptr, bool Value) { Ptr->bAutoManageActiveCameraTarget = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_BlendedTargetViewRotation_GET(APlayerController* Ptr) { return (INT_PTR)&(Ptr->BlendedTargetViewRotation); }
	DOTNET_EXPORT void E_PROP_APlayerController_BlendedTargetViewRotation_SET(APlayerController* Ptr, INT_PTR Value) { Ptr->BlendedTargetViewRotation = *(FRotator*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_bRenderPrimitiveComponents_GET(APlayerController* Ptr) { return Ptr->bRenderPrimitiveComponents; }
	DOTNET_EXPORT void E_PROP_APlayerController_bRenderPrimitiveComponents_SET(APlayerController* Ptr, bool Value) { Ptr->bRenderPrimitiveComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_CheatManager_GET(APlayerController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->CheatManager); }
	DOTNET_EXPORT void E_PROP_APlayerController_CheatManager_SET(APlayerController* Ptr, UCheatManager* Value) { Ptr->CheatManager = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_ClientCap_GET(APlayerController* Ptr) { return Ptr->ClientCap; }
	DOTNET_EXPORT void E_PROP_APlayerController_ClientCap_SET(APlayerController* Ptr, int32 Value) { Ptr->ClientCap = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_ForceFeedbackScale_GET(APlayerController* Ptr) { return Ptr->ForceFeedbackScale; }
	DOTNET_EXPORT void E_PROP_APlayerController_ForceFeedbackScale_SET(APlayerController* Ptr, float Value) { Ptr->ForceFeedbackScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_HitResultTraceDistance_GET(APlayerController* Ptr) { return Ptr->HitResultTraceDistance; }
	DOTNET_EXPORT void E_PROP_APlayerController_HitResultTraceDistance_SET(APlayerController* Ptr, float Value) { Ptr->HitResultTraceDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_InputPitchScale_GET(APlayerController* Ptr) { return Ptr->InputPitchScale; }
	DOTNET_EXPORT void E_PROP_APlayerController_InputPitchScale_SET(APlayerController* Ptr, float Value) { Ptr->InputPitchScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_InputRollScale_GET(APlayerController* Ptr) { return Ptr->InputRollScale; }
	DOTNET_EXPORT void E_PROP_APlayerController_InputRollScale_SET(APlayerController* Ptr, float Value) { Ptr->InputRollScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_InputYawScale_GET(APlayerController* Ptr) { return Ptr->InputYawScale; }
	DOTNET_EXPORT void E_PROP_APlayerController_InputYawScale_SET(APlayerController* Ptr, float Value) { Ptr->InputYawScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_LastSpectatorStateSynchTime_GET(APlayerController* Ptr) { return Ptr->LastSpectatorStateSynchTime; }
	DOTNET_EXPORT void E_PROP_APlayerController_LastSpectatorStateSynchTime_SET(APlayerController* Ptr, float Value) { Ptr->LastSpectatorStateSynchTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_LastSpectatorSyncLocation_GET(APlayerController* Ptr) { return (INT_PTR)&(Ptr->LastSpectatorSyncLocation); }
	DOTNET_EXPORT void E_PROP_APlayerController_LastSpectatorSyncLocation_SET(APlayerController* Ptr, INT_PTR Value) { Ptr->LastSpectatorSyncLocation = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_LastSpectatorSyncRotation_GET(APlayerController* Ptr) { return (INT_PTR)&(Ptr->LastSpectatorSyncRotation); }
	DOTNET_EXPORT void E_PROP_APlayerController_LastSpectatorSyncRotation_SET(APlayerController* Ptr, INT_PTR Value) { Ptr->LastSpectatorSyncRotation = *(FRotator*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_LocalPlayerCachedLODDistanceFactor_GET(APlayerController* Ptr) { return Ptr->LocalPlayerCachedLODDistanceFactor; }
	DOTNET_EXPORT void E_PROP_APlayerController_LocalPlayerCachedLODDistanceFactor_SET(APlayerController* Ptr, float Value) { Ptr->LocalPlayerCachedLODDistanceFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_MuteList_GET(APlayerController* Ptr) { return (INT_PTR)&(Ptr->MuteList); }
	DOTNET_EXPORT void E_PROP_APlayerController_MuteList_SET(APlayerController* Ptr, INT_PTR Value) { Ptr->MuteList = *(FPlayerMuteList*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_MyHUD_GET(APlayerController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->MyHUD); }
	DOTNET_EXPORT void E_PROP_APlayerController_MyHUD_SET(APlayerController* Ptr, AHUD* Value) { Ptr->MyHUD = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_NetPlayerIndex_GET(APlayerController* Ptr) { return Ptr->NetPlayerIndex; }
	DOTNET_EXPORT void E_PROP_APlayerController_NetPlayerIndex_SET(APlayerController* Ptr, uint8 Value) { Ptr->NetPlayerIndex = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_Player_GET(APlayerController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->Player); }
	DOTNET_EXPORT void E_PROP_APlayerController_Player_SET(APlayerController* Ptr, UPlayer* Value) { Ptr->Player = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_PlayerInput_GET(APlayerController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->PlayerInput); }
	DOTNET_EXPORT void E_PROP_APlayerController_PlayerInput_SET(APlayerController* Ptr, UPlayerInput* Value) { Ptr->PlayerInput = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_RotationInput_GET(APlayerController* Ptr) { return (INT_PTR)&(Ptr->RotationInput); }
	DOTNET_EXPORT void E_PROP_APlayerController_RotationInput_SET(APlayerController* Ptr, INT_PTR Value) { Ptr->RotationInput = *(FRotator*)Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_SmoothTargetViewRotationSpeed_GET(APlayerController* Ptr) { return Ptr->SmoothTargetViewRotationSpeed; }
	DOTNET_EXPORT void E_PROP_APlayerController_SmoothTargetViewRotationSpeed_SET(APlayerController* Ptr, float Value) { Ptr->SmoothTargetViewRotationSpeed = Value; }
	
	DOTNET_EXPORT auto E_PROP_APlayerController_TargetViewRotation_GET(APlayerController* Ptr) { return (INT_PTR)&(Ptr->TargetViewRotation); }
	DOTNET_EXPORT void E_PROP_APlayerController_TargetViewRotation_SET(APlayerController* Ptr, INT_PTR Value) { Ptr->TargetViewRotation = *(FRotator*)Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_APlayerController(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<APlayerController>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_APlayerController_ActivateTouchInterface(APlayerController* Self, UTouchInterface* NewTouchInterface)
	{
		auto _p0 = NewTouchInterface;
		Self->ActivateTouchInterface(_p0);
	}
	DOTNET_EXPORT auto E_APlayerController_AddPitchInput(APlayerController* Self, float Val)
	{
		auto _p0 = Val;
		Self->AddPitchInput(_p0);
	}